# LLMRouter

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test.md
configs/model_config_test/: automix.yaml  dcrouter.yaml  elorouter.yaml  hybrid_llm.yaml  mfrouter.yaml  mlprouter.yaml  routerdc_nq.yaml  svmrouter.yaml
configs/model_config_train/: automix.yaml  dcrouter.yaml  elorouter.yaml  hybrid_llm.yaml  mfrouter.yaml  mlprouter.yaml  svmrouter.yaml
contributing/: index.html
contributing/adding-translations/: index.html
conventions/: index.html
creating-your-site/: index.html
custom_prompts/: README.md  __init__.py  example_custom_task.py
customization/: index.html
data/dcrouter_preprocessed/: test.json  train.json
data/routerdc/: router_test_data_nq.jsonl  router_train_data_nq.json
docs/: .gitignore  README.md  index.md  mkdocs.yml
docs/backend/: main.py  requirements.txt
docs/scripts/: index.py
docs/site/: sitemap.xml
enterprise-support/: index.html
getting-started/: index.html
insiders/benefits/: index.html
insiders/getting-started/: index.html
insiders/how-to-sponsor/: index.html
insiders/our-sponsors/: index.html
insiders/privacy/: index.html
insiders/upgrade/: index.html
license/: index.html
llmrouter/: main_automix.py  main_routerdc.py
llmrouter/cli/: router_chat.py
llmrouter/data/: __init__.py  api_calling_evaluation.py  data.py  data_generation.py  data_loader.py  math_eval.py
llmrouter/models/: __init__.py  base_trainer.py  meta_router.py
llmrouter/models/RouterDC/: __init__.py  data_pipeline.py  dataset.py  main_routerdc.py  model.py  pyproject.toml  router.py  trainer.py  utils.py
llmrouter/utils/: __init__.py  api_calling.py  constants.py  conversation.py  data_convert.py  data_loader.py  dataframe_utils.py  embeddings.py  evaluation.py  progress.py  prompting.py  setup.py
philosophy/: index.html
plugins/: index.html
plugins/group/: index.html
plugins/info/: index.html
plugins/meta/: index.html
plugins/offline/: index.html
plugins/projects/: index.html
plugins/search/: index.html
plugins/social/: index.html
plugins/typeset/: index.html
publishing-your-site/: index.html
reference/admonitions/: index.html
setup/: index.html
stylesheets/: llm-search.css
tests/: test_automix_router.py  test_largest_router.py  test_routerdc.py
(+192 files in other folders)
