[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmrouter"
version = "0.1.0"
description = "A unified framework for LLM routing and evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
  { name = "Tao Feng", email = "taofeng2@illinois.edu" },
  { name = "Haozhen Zhang", email = "wazhz14@gmail.com" }
]

dependencies = [
  "torch>=2.0",
  "transformers>=4.40",
  "numpy>=1.21",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "pyyaml>=6.0",
  "tqdm>=4.65",
  "datasets>=2.14",
  "pydantic>=2.0",
  "gradio>=4.0",
  "litellm>=1.0",
  "peft>=0.7",
  "torch-geometric>=2.3",
  "scipy>=1.10",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/ulab-uiuc/LLMRouter"
"Source" = "https://github.com/ulab-uiuc/LLMRouter"
"Bug Tracker" = "https://github.com/ulab-uiuc/LLMRouter/issues"

[project.scripts]
llmrouter = "llmrouter.cli.router_main:main"

[tool.setuptools]
# Enable including package data (YAML configs, JSON files, etc.)
# For finer control, provide a MANIFEST.in file.
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["llmrouter*"]
